Add E2E parity across Go, TypeScript, Java and Python for all 92 spec services
- Adds Gherkin feature files and BDD step definitions for all 92 spec
  services across Go, TypeScript, Java, and Python SDKs
- Implements cross-service dispatch phase 2 (Lambda integrations with all
  services: DynamoDB streams, S3 events, SNS/SQS triggers, etc.)
- Enables @internal and @capacity e2e scenarios in Python SDK: removes the
  "not internal" pytest filter, wires capacity controls, and fixes step
  precondition guards across all 90 service suites
- Splits Python SDK e2e into a parallel matrix job per service suite for
  faster CI feedback
- Fixes provider teardown to cancel pending asyncio tasks (DynamoDB stream
  dispatcher) on session stop
- Adds glacier multipart capacity enforcement, neptune/cognito/apigateway
  lifecycle and auth steps, and stepfunctions/SSM world-state guards

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>